# finance-de

./: Makefile  README.md  pyproject.toml
data/: data_1.csv  data_2.xlsx  data_3.xlsx  data_4.xlsx
deploy/: .env.default  api.Dockerfile  compose.yml
scripts/: run.py
src/api/: config.py  connector.py  main.py
src/api/file_ingestion/: cleaner.py  constants.py  reader.py  router.py  schemas.py  service.py
src/database/: engine.py
src/database/sql/: create_db.sql
